egonlang-core/res/examples/invalid/const_decl_typed_with_nonidentifier.eg
const a: 123 = 456;

// out: SyntaxError: unexpected "123"; expected: ["identifier"]
// out: SyntaxError: unexpected "="; expected: ["\"!=\"", "\"%\"", "\")\"", "\"*\"", "\"+\"", "\",\"", "\"-\"", "\"..\"", "\"/\"", "\";\"", "\"<\"", "\"<=\"", "\"==\"", "\">\"", "\">=\"", "\"]\"", "\"and\"", "\"or\"", "\"}\""]